# vasco-dasch

./: .gitignore  CLAUDE.md  README.md
notes/: night1_summary.md  night2_summary.md
vasco-dasch/: .env.example  .gitignore  config.yaml  pyproject.toml  run_pipeline.sh
vasco-dasch/src/: 00_fetch_vasco_catalog.py  01_query_plate_coverage.py  02_retrieve_lightcurves.py  03_filter_candidates.py  04_download_fits.py  05_source_extraction.py  06_statistical_analysis.py  07_spatial_correlation.py  08_shadow_analysis.py  09_generate_figures.py
vasco-dasch/src/utils/: coordinates.py  dasch_api.py  database.py  statistics.py
vasco-dasch/tests/: test_api_connection.py  test_coordinates.py  test_on_known_source.py
